--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,8 @@
     "com.spoiledcat.git": "1.0.27",
     "com.unity.ai.navigation": "2.0.4",
     "com.unity.collab-proxy": "2.5.2",
+    "com.unity.entities": "1.2.4",
+    "com.unity.entities.graphics": "1.2.4",
     "com.unity.ide.rider": "3.0.31",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.11.0",
