--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -49,7 +49,10 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
+    "com.unity.modules.xr": "1.0.0",
+    "com.unity.mathematics": "1.2.1",
+    "com.unity.collections": "0.15.0-preview.21",
+    "com.unity.nuget.newtonsoft-json": "2.0.0"
   },
   "scopedRegistries": [
     {
